--- a/Desktop/guitar/store/package.json
+++ b/Desktop/guitar/store/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "gh-pages": "gh-pages -d build",
-    "commit": "git add . && git commit -m \"Bash commit\" && git push origim head",
+    "commit": "git add . && git commit -m \"Bash commit\" && git push origin head",
     "deploy": "npm run build && npm run gh-pages"
   },
   "eslintConfig": {
